--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
 readme = "README.md"
-packages = [{include = "psb_project"}]
+packages = [{include = "psb-project"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
