--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.10"
 streamlit = "^1.15.2"
 pandas = "^1.5.2"
 psycopg2-binary = "^2.9.5"
+sqlalchemy = "^1.4.44"
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.10.0"
