--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ streamlit = "^1.15.2"
 pandas = "^1.5.2"
 psycopg2-binary = "^2.9.5"
 sqlalchemy = "^1.4.44"
+pysqlite3 = "^0.5.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.10.0"
